# mpd-thing-rs

./: Cargo.toml
src/: containers.rs  main.rs
