[package]
name = "mpd-thing-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = { version = "1.5.6" }
serde = { version = "1.0.147", features = ['derive'] }
serde_json = { version = "1.0.87" }
tui = { version = "0.19.0", default-features=false, features=['termion', 'serde'] }
